@@ -1,16 +1,19 @@
 <?xml version="1.0"?>
-<imprimatur port="8080" hostName="localhost">
+<!DOCTYPE imprimatur PUBLIC 
+    "-//Imprimatur DTD 001//EN"
+    "http://imprimatur.sourceforge.net/imprimatur-001.dtd">
+<imprimatur port="8080" hostname="localhost">
   <test name="File upload">
     <request path="/importData.jsp" method="post"
-    enctype="multipart/form-data" waitForRefreshes="true">
+    enctype="multipart/form-data" wait-for-refreshes="true">
       <parameter name="id" value="1" />
 
       <parameter type="file" name="importFile"
       value="workspace/theelected/test/meps.csv" />
 
-      <regex>.*Uploaded ok..*</regex>
+      <regex pattern=".*Uploaded ok..*"/>
 
-      <responseCode value="200" />
+      <response-code value="200" />
     </request>
   </test>
 </imprimatur>
