@@ -1,14 +1,17 @@
 <?xml version="1.0"?>
-<imprimatur port="8080" hostName="localhost">
+<!DOCTYPE imprimatur PUBLIC 
+    "-//Imprimatur DTD 001//EN"
+    "http://imprimatur.sourceforge.net/imprimatur-001.dtd">
+<imprimatur port="8080" hostname="localhost">
   <test name="Update name">
     <request path="/editor/updateName" method="post">
       <parameter name="id" value="1" />
 
       <parameter name="name" value="Harold" />
 
-      <regex>.*Updated successfully!.*</regex>
+      <regex pattern=".*Updated successfully!.*"/>
 
-      <responseCode value="200" />
+      <response-code value="200" />
     </request>
   </test>
 </imprimatur>
